@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- report SOS DescribeObservationType in Capabilities (#3777)
+
 - Updated lexer to detect time attribute bindings (e.g. `[item]`) in logical expressions
 
 - Fixed layer context expressions (REQUIRES/LABELREQUIRES) (#3737)
